--- a/PaperZee/web/index.html
+++ b/PaperZee/web/index.html
@@ -49,7 +49,7 @@
       body {
         display: flex;
         /* Allows you to scroll below the viewport; default value is visible */
-        overflow-y: auto;
+        /* overflow-y: auto; */
         overscroll-behavior-y: none;
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
